lib/src/compiler/tests/testdata/errors/122.out
error[E112]: invalid regular expression
 --> line:3:14
  |
3 |     $a = /foo{/
  |              ^ unclosed counted repetition
  |
  = note: did you mean `\{` instead of `{`?